# redscript-syntax

./: Cargo.toml  LICENSE
ast/: Cargo.toml
ast/src/: ast.rs  files.rs  lib.rs  span.rs  visitor.rs
cli/: Cargo.toml
cli/src/: main.rs
formatter/: Cargo.toml
formatter/src/: lib.rs
formatter/tests/: test.rs
formatter/tests/data/: ControlFlow.reds  Dummy.reds  Module.reds  Operators.reds
parser/: Cargo.toml
parser/src/: lexer.rs  lib.rs  parser.rs
parser/src/parser/: expr.rs  item.rs  stmt.rs
