[workspace]
members = ["parser", "ast", "formatter", "cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["jekky"]
edition = "2021"

[workspace.dependencies]
anyhow = "1"
bitflags = "2"
derive-where = "1"
argh = "0.1"
pretty_dtoa = "0.3"
pretty_assertions = "1"
chumsky = { version = "1.0.0-alpha.7", features = ["label"] }

[workspace.lints.rust]
warnings = "deny"
future-incompatible = "deny"
let-underscore = "deny"
nonstandard-style = "deny"
rust-2018-compatibility = "deny"
rust-2018-idioms = "deny"
rust-2021-compatibility = "deny"

[workspace.lints.clippy]
all = "deny"
match_same_arms = "deny"
semicolon_if_nothing_returned = "deny"
single_match_else = "deny"
redundant_closure_for_method_calls = "deny"
cloned_instead_of_copied = "deny"
redundant_else = "deny"
unnested_or_patterns = "deny"
unreadable_literal = "deny"
type_repetition_in_bounds = "deny"
equatable_if_let = "deny"
implicit_clone = "deny"
explicit_deref_methods = "deny"
explicit_iter_loop = "deny"
inefficient_to_string = "deny"
match_bool = "deny"

[profile.release]
lto = true
codegen-units = 1
