[workspace]
members = ["parser", "ast", "formatter", "cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["jekky"]
edition = "2021"

[workspace.dependencies]
anyhow = "1"
bitflags = "2"
derive-where = "1"
argh = "0.1"
pretty_dtoa = "0.3"
pretty_assertions = "1"
chumsky = { version = "1.0.0-alpha.7", features = ["label"] }

[workspace.lints.rust]
warnings = "warn"
future-incompatible = "warn"
let-underscore = "warn"
nonstandard-style = "warn"
rust-2018-compatibility = "warn"
rust-2018-idioms = "warn"
rust-2021-compatibility = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
match_same_arms = "warn"
semicolon_if_nothing_returned = "warn"
single_match_else = "warn"
redundant_closure_for_method_calls = "warn"
cloned_instead_of_copied = "warn"
redundant_else = "warn"
unnested_or_patterns = "warn"
unreadable_literal = "warn"
type_repetition_in_bounds = "warn"
equatable_if_let = "warn"
implicit_clone = "warn"
explicit_deref_methods = "warn"
explicit_iter_loop = "warn"
inefficient_to_string = "warn"
match_bool = "warn"

[profile.release]
lto = true
codegen-units = 1
