[package]
name = "redscript-formatter"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
pretty_dtoa.workspace = true
redscript-ast = { path = "../ast" }

[dev-dependencies]
pretty_assertions.workspace = true
redscript-parser = { path = "../parser" }

[lints]
workspace = true
