[package]
name = "redscript-formatter"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
pretty_dtoa.workspace = true
redscript-ast = { path = "../ast" }
redscript-parser = { path = "../parser" }

[dev-dependencies]
pretty_assertions.workspace = true

[lints]
workspace = true
