[package]
name = "redscript-parser"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
chumsky.workspace = true
redscript-ast = { path = "../ast", features = ["chumsky"] }

[dev-dependencies]
pretty_assertions.workspace = true
redscript-ast = { path = "../ast", features = ["testing"] }

[lints]
workspace = true
